--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 </section>
 
 <section id="about">
-  <img src="https://via.placeholder.com/280" alt="Akshatha N Daddur Photo" />
+  <img src="https://via.placeholder.com/280" alt="Akshatha N Daddur " />
   <div class="about-content">
     <h2>About Me</h2>
     <p>Hello! I'm a dedicated Bachelor of Computer Applications (BCA) student with a strong interest in UI/UX design. I love exploring user-centered design principles and creating engaging interfaces that deliver value and delightful experiences. I'm always eager to learn and grow my skills.</p>
