--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <body>
 
 <section id="hero" class="hero" aria-label="Introduction">
-  <h1>Hello, I'm Akshatha N Daddur</h1>
+  <h1>Hello, I'm Pallavi.v</h1>
   <h2>BCA Student | Aspiring UI/UX Designer & Programmer</h2>
   <p>I combine my passion for programming and design to create user-friendly digital experiences that make a difference. Dedicated to continuous learning, I enjoy solving problems with creativity and technology.</p>
   <a href="#contact" class="btn-primary" role="button">Get In Touch</a>
@@ -328,11 +328,11 @@
   <div class="contact-info">
     <div class="contact-card" aria-label="Email contact information">
       <h3>Email</h3>
-      <p>akshatha.daddur@email.com</p>
+      <p>pallavivasu0602@email.com</p>
     </div>
     <div class="contact-card" aria-label="Phone contact information">
       <h3>Phone</h3>
-      <p>9986533360</p>
+      <p>7483103384</p></p>
     </div>
     <div class="contact-card" aria-label="LinkedIn profile link">
       <h3>LinkedIn</h3>
@@ -342,7 +342,7 @@
 </section>
 
 <footer>
-  &copy; 2024 Akshatha N Daddur | UI/UX Portfolio for BCA Students
+  &copy; 2024 Pallavi.V| UI/UX Portfolio for BCA Students
 </footer>
 </body>
 </html>
